log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        # 1. Define the ConfigMap as a volume
        - name: config-volume
          configMap:
            name: log-output-configmap
      containers:
      - name: log-writer
        image: diing54/log-output:v6
        command: ["node", "writer.js"]
        volumeMounts:
        - name: shared-logs
          mountPath: /usr/src/app/files
      - name: log-reader
        image: diing54/log-output:v6
        command: ["node", "reader.js"]
        # 2. Inject the environment variable
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: shared-logs
          mountPath: /usr/src/app/files
        # 3. Mount the ConfigMap file into the container
        - name: config-volume
          mountPath: /usr/src/app/config
